scrollbar issue fix

--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 
 header {
     background-image: url(images/back-4.jpg);
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-size: cover;
     position: relative;
     font-family: "Montserrat", sans-serif;
@@ -126,7 +125,7 @@ nav ul li {
     /* border: 2px solid yellow; */
     height: 40vh;
     width: 90vw;
-    margin: 60px;
+    margin: 76px auto 0 auto;
     background-color: white;
     border-radius: 20px;
     padding: 20px;
